--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-
+    <input type="text" id="autocomplete-city" placeholder="Начните вводить код или название">
+    <div id="result-city">div here</div>
   </body>
 </html>
