--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <input type="text" id="autocomplete-city" placeholder="Начните вводить код или название">
-    <div id="result-city">div here</div>
+    <div id="result-city">
+      <p>Result 1</p>
+      <p>Result 2</p>
+      <p>Result 3</p>
+    </div>
   </body>
 </html>
