--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
       <p>Result 2</p>
       <p>Result 3</p>
     </div>
+    <script src="js/script.js" type="application/javascript"></script>
   </body>
 </html>
