linked cities.js

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="result-city">
 
     </div>
+    <script src="js/cities.js" type="application/javascript"></script>
     <script src="js/script.js" type="application/javascript"></script>
   </body>
 </html>
